--- a/packages/azure/carvel/psql/package-metadata.yml
+++ b/packages/azure/carvel/psql/package-metadata.yml
@@ -1,17 +1,15 @@
----
 apiVersion: data.packaging.carvel.dev/v1alpha1
 kind: PackageMetadata
 metadata:
-  creationTimestamp: null
-  name: elasticache.aws.references.services.apps.tanzu.vmware.com
+  name: psql.azure.ref.services.apps.tanzu.vmware.com
 spec:
   categories:
   - services
-  displayName: AWS Elasticache instances
+  displayName: Azure Flexible Server for PostgreSQL
   longDescription: |
-    Helps you install an AWS Elasticache for Redis using ACK
+    Helps you install an Azure Flexible Server for PostgreSQL which can be bound to your application via a ServiceBinding.
   maintainers:
   - name: The TAP Reference Packages Team
   providerName: VMware
-  shortDescription: elasticache.services.k8s.aws
+  shortDescription: Azure PostgreSQL with ASO
   supportDescription: Not supported - provided as reference package only
