--- a/.github/workflows/reusable-crossplane-publish.yml
+++ b/.github/workflows/reusable-crossplane-publish.yml
@@ -5,6 +5,13 @@ on:
   workflow_call:
 
     inputs:
+      packages_basedir:
+        type: string
+        description: Packages base directory path
+        default: packages
+      package_path:
+        type: string
+        required: true
       package_version:
         type: string
         required: true
@@ -45,7 +52,9 @@ jobs:
       PACKAGE_REPOSITORY: ${{ github.repository }}/${{ inputs.package_provider }}/crossplane/${{ inputs.package_name }}
       PACKAGE_PROVIDER: ${{ inputs.package_provider }}
       PACKAGE_NAME: ${{ inputs.package_name }}
-
+      PACKAGES_BASEDIR: ${{ inputs.packages_basedir }}
+      PACKAGE_DIR: ${{ inputs.packages_basedir }}/${{ inputs.package_path }}
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
