--- a/examples/redis/golang/Dockerfile
+++ b/examples/redis/golang/Dockerfile
@@ -21,7 +21,7 @@ ENV SERVICE_BINDING_ROOT /bindings
 # RUN apk --no-cache add curl jq
 RUN adduser -h /app -s /bin/sh -u 1000 -D app
 RUN mkdir -p /config
-COPY config/redis.yaml /config/
+COPY config/config.yml /config/
 WORKDIR /app
 COPY --from=build-env /go/src/github.com/bzhtux/redis/redis-app /app/
 USER 1000
