--- a/packages/multicloud/crossplane/psql/ytt/azure-composition.ytt.yml
+++ b/packages/multicloud/crossplane/psql/ytt/azure-composition.ytt.yml
@@ -21,7 +21,7 @@ spec:
       spec:
         forProvider:
           manifest:
-            apiVersion: tf.crossplane.io/v1alpha1
+            apiVersion: tf.upbound.io/v1beta1
             kind: ProviderConfig
             spec:
               credentials: []
@@ -48,7 +48,7 @@ spec:
       toFieldPath: spec.forProvider.manifest.metadata.name
   - name: password
     base:
-      apiVersion: tf.crossplane.io/v1alpha1
+      apiVersion: tf.upbound.io/v1beta1
       kind: Workspace
       spec:
         forProvider:
