fix azure test script

--- a/packages/azure/carvel/psql/config/99-kapp-config.yml
+++ b/packages/azure/carvel/psql/config/99-kapp-config.yml
@@ -51,3 +51,7 @@ rebaseRules:
   type: copy
   sources: [new, existing]
   resourceMatchers: *flexibleServerResources
+
+ownershipLabelRules:
+- path: [metadata, labels]
+  resourceMatchers: *flexibleServerResources
