--- a/.github/workflows/reusable-bump-version.yml
+++ b/.github/workflows/reusable-bump-version.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Bump version and push tag
         id: bump
-        uses: anothrNick/github-tag-action@v1
+        uses: anothrNick/github-tag-action@1.57.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: false
